--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(39, 38, 38);
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  text-align: center;
+  font-size: 150px;
+  background-color: purple;
+  width: 300px;
+  margin-left: 500px;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px 5px #ccc;
+  margin-bottom: 50px;
+  color: wheat;
+  margin-top: 90px;
+}
+button {
+  width: 50px;
+  height: 40px;
+  font-size: 30px;
+  border-radius: 10px;
+  font-weight: bold;
+  margin-left: 10px;
+  box-shadow: 2px 2px 2px 2px #ccc;
+  border: none;
+  background-color: wheat;
+}
+button:hover {
+  background-color: aqua;
+}
+.but {
+  margin-left: 590px;
+}
+h3 {
+  color: white;
+  text-align: center;
+  font-size: 25px;
+  color: yellow;
+  padding-top: 100px;
 }
